--- a/contact.html
+++ b/contact.html
@@ -57,27 +57,27 @@
           <form class="col s12" action="contact.php" method="post">
             <div class="row">
               <div class="input-field col s6">
-                <input  id="yourname" name="yourname" type="text" class="validate">
+                <input name="firstname" type="text" class="validate">
                 <label for="first_name">First Name</label>
               </div>
               <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
+                <input name="lastname" type="text" class="validate">
                 <label for="last_name">Last Name</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s6">
-                <input id="phone" type="text" class="validate">
+                <input name="phone" type="text" class="validate">
                 <label for="phone">Phone</label>
               </div>
               <div class="input-field col s6">
-                <input id="email" type="email" name="email" class="validate">
+                <input name="email" type="email" class="validate">
                 <label for="email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <textarea id="comments" name="comments" class="materialize-textarea"></textarea>
+                <textarea name="message" class="materialize-textarea"></textarea>
                 <label for="msg">Message</label>
               </div>
           </form>
