--- a/history.html
+++ b/history.html
@@ -24,14 +24,14 @@
           <li><a href="history.html" class="black-text">History</a></li>
           <li><a href="donate.html" class="black-text">Donate</a></li>
           <li><a href="apply.html" class="black-text">Apply</a></li>
-          <li><a href="contact.html" class="black-text">Contact</a></li>
+          <li><a href="contact2.php" class="black-text">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="index.html" class="black-text">Home</a></li>
           <li><a href="history.html" class="black-text">History</a></li>
           <li><a href="donate.html" class="black-text">Donate</a></li>
           <li><a href="apply.html" class="black-text">Apply</a></li>
-          <li><a href="contact.html" class="black-text">Contact</a></li>
+          <li><a href="contact2.php" class="black-text">Contact</a></li>
         </ul>
     </nav>
   </div>
@@ -47,8 +47,8 @@
     </div>
     <!-- End of header-->
 
-    <!-- How to Apply -->
-    <div class="container section scrollspy" id="apply">
+    <!-- Mission Statement -->
+    <div class="container">
       <div class="row">
       <h1 class="green-text"> History </h1>
         <p class="center"> The Hightower foundation is committed to The enrichment of Jones high school students,
@@ -56,16 +56,166 @@
                own families and the families of loved ones. We are passionate about our youth and their educational
                careers.
         </p>
-        <a class="waves-effect waves-light btn amber">Coming Soon</a>
-       </div>
-       <br>
-       <hr>
-       <br>
-       <br>
-       <br>
-     </div>
+      </div>
+      <hr>
+    </div>
+
+    <!-- Events -->
+    <div class="container">
+      <h1 class="green-text"> Recent Activity </h1>
+      <div class="row">
+        <!--Card One -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">Sponsored Jones High School student Jermaine Bufford to University of Miami Football Camp.</p>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card One Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+          </div>
+        </div>
+        <!--Card One End -->
+
+        <!--Card Two -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">Sponsored Willow Mincey to Summer Gymnastics Camp.</p>
+              <br>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card Two Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+          </div>
+        </div>
+        <!--Card Two End -->
+
+        <!--Card Three -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">Sponsored two Jones High School Students to attend AAU Track & Field National with Team Florida Elite.</p>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card Three Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+        </div>
+        <!--Card Three End -->
+
+        <!--Card Four -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">The Hightower Foundation joined Jones High School Booster Club.</p>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card Four Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+          </div>
+        </div>
+        <!--Card Four End -->
+
+        <!--Card Five -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">The Hightower purchased an advertisement for Jones High School Legacy Classic.</p>
+              <br>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card Five Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+          </div>
+        </div>
+        <!--Card Five End -->
+
+        <!--Card Six -->
+        <div class="col m4 l4 s12">
+          <div class="card grey lighten-3">
+            <div class="card-content white-text">
+              <span class="card-title black-text"></span>
+              <p class="black-text">Sponsored Family for Christmas through the Universal Orlando Foundation.</p>
+            </div>
+            <div class="card-action">
+              <a href="#modal1">Read more</a>
+            </div>
+          </div>
+
+          <!-- Card Six Modal -->
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively. This is where images will go as well.</p>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+        </div>
+        <!--Card Six End -->
 
 
+      </div>
+    </div>
+       <br>
+       <br>
+       <br>
 <!-- Footer -->
     <footer class="page-footer black">
           <div class="container">
@@ -94,7 +244,7 @@
                   <li><a href="history.html" class="white-text">History</a></li>
                   <li><a href="donate.html" class="white-text">Donate</a></li>
                   <li><a href="apply.html" class="white-text">Apply</a></li>
-                  <li><a href="contact.html" class="white-text">Contact</a></li>
+                  <li><a href="contact2.php" class="white-text">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -145,5 +295,13 @@ $(document).ready(function(){
   }).scroll(); //invoke scroll-handler on page-load
 });
     </script>
+
+    <!-- Modal Initializer-->
+    <script>
+    $(document).ready(function(){
+   // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+   $('.modal').modal();
+ });
+       </script>
 </body>
 </html>
