--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <li><a href="history.html" class="black-text">History</a></li>
           <li><a href="donate.html" class="black-text">Donate</a></li>
           <li><a href="apply.html" class="black-text">Apply</a></li>
-          <li><a href="contact.html" class="black-text">Contact</a></li>
+          <li><a href="contact2.php" class="black-text">Contact</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="index.html" class="black-text">Home</a></li>
           <li><a href="history.html" class="black-text">History</a></li>
           <li><a href="donate.html" class="black-text">Donate</a></li>
           <li><a href="apply.html" class="black-text">Apply</a></li>
-          <li><a href="contact.html" class="black-text">Contact</a></li>
+          <li><a href="contact.php" class="black-text">Contact</a></li>
         </ul>
     </nav>
   </div>
@@ -39,7 +39,7 @@
     <div class="parallax-container valign-wrapper section scrollspy" id="home">
       <div class="container">
         <div class="row">
-          <div class="col s12 white-text">
+          <div class="col s12 white-text" style="padding-bottom:200px;">
             <h1 class="animated fadeInUp center-align"><u> Welcome</u></h1>
             <h1 class="animated fadeInUp center-align">The Hightower Foundation </h1>
           </div>
@@ -82,7 +82,7 @@
 <!-- Opportunities -->
     <div class="container">
       <div class="row">
-        <h2 class="green-text"> Creating opportunities </h1>
+        <h2 class="green-text center"> Creating opportunities </h1>
         <p class="center"> The Hightower Foundation was started in June 2017 by Chris
           and Janecia Hightower, but its mission was conceptualized many years
           ago. During the Hightower's matriculation through JHS and FAMU, they
@@ -102,27 +102,27 @@
     </div>
 
 <div class="container">
-    <h2 class="green-text">Thank You HFI Donors!</h2>
+    <h2 class="green-text center">Thank You HFI Donors!</h2>
     <marquee behavior="scroll" direction="up" style="height:100px;" scrollamount=1 class="n/a">
-      <p> Chris Hightower </p>
-      <p> Janecia Hightower </p>
-      <p> Adrian Williams </p>
-      <p> Jerry & Aisha Atkins </p>
-      <p> Will & Jamie Brown </p>
-      <p> Shaun Delozier </p>
-      <p> Kathleen Delozier </p>
-      <p> Temeka Wiggins </p>
-      <p> Billy Jones </p>
-      <p> DeAngela Morant </p>
-      <p> Loudeline Francios </p>
-      <p> Saidah Greene </p>
-      <p> Anthony Thomas </p>
-      <p> Ron Blalakay </p>
-      <p> James Cooley </p>
-      <p> Tony Jenkins </p>
-      <p> Keelyn Fleming </p>
-      <p> Melonise Noel </p>
-      <p> Alexandra Louis </p>
+    </p> Chris Hightower </p>
+    </p> Janecia Hightower </p>
+    </p> Adrian Williams </p>
+    </p> Jerry & Aisha Atkins </p>
+    </p> Will & Jamie Brown </p>
+    </p> Shaun Delozier </p>
+    </p> Kathleen Delozier </p>
+    </p> Temeka Wiggins </p>
+    </p> Billy Jones </p>
+    </p> DeAngela Morant </p>
+    </p> Loudeline Francios </p>
+    </p> Saidah Greene </p>
+    </p> Anthony Thomas </p>
+    </p> Ron Blalakay </p>
+    </p> James Cooley </p>
+    </p> Tony Jenkins </p>
+    </p> Keelyn Fleming </p>
+    </p> Melonise Noel </p>
+    </p> Alexandra Louis </p>
     </marquee>
 </div>
 
@@ -155,7 +155,7 @@
                   <li><a href="history.html" class="white-text">History</a></li>
                   <li><a href="donate.html" class="white-text">Donate</a></li>
                   <li><a href="apply.html" class="white-text">Apply</a></li>
-                  <li><a href="contact.html" class="white-text">Contact</a></li>
+                  <li><a href="contact2.php" class="white-text">Contact</a></li>
                 </ul>
               </div>
             </div>
