--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="history.html" class="black-text">History</a></li>
           <li><a href="donate.html" class="black-text">Donate</a></li>
           <li><a href="apply.html" class="black-text">Apply</a></li>
-          <li><a href="contact.php" class="black-text">Contact</a></li>
+          <li><a href="contact2.php" class="black-text">Contact</a></li>
         </ul>
     </nav>
   </div>
